Minor tidy up. more still to do.